Fixed nav bar collapse menu

--- a/assets/style.css
+++ b/assets/style.css
@@ -53,7 +53,7 @@ form {
   display: inline-block;
 }
 
-button {
+.register {
   bottom: 0;
   margin: 0;
   position: absolute;
